--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib",
-    "declaration": true
+    "declaration": true,
+    "module": "esnext",
+    "moduleResolution": "bundler"
   },
   "include": ["src"]
 }
