--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags",
+    "test": "jest"
   },
   "devDependencies": {
+    "@jest/globals": "^29",
     "@tsconfig/recommended": "^1",
+    "@types/jest": "^29",
+    "@vkontakte/vk-bridge-mock": "^2",
+    "jest": "^29.6.2",
     "prettier": "^3",
+    "ts-jest": "^29",
     "tslint": "^6",
     "tslint-config-prettier": "^1",
     "typescript": "^5"
@@ -28,7 +36,10 @@
     "abstract-level": "^1",
     "module-error": "^1"
   },
-  "keywords": ["birdge", "level"],
+  "keywords": [
+    "birdge",
+    "level"
+  ],
   "author": "Mnwa",
   "repository": {
     "type": "git",
